--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -8,7 +8,7 @@ on:
 jobs:
   compile:
 
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
 
     steps:
     - uses: actions/checkout@v4
@@ -23,7 +23,7 @@ jobs:
 
   security-checks:
   
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     needs: compile
   
     steps:
