--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -38,10 +38,11 @@ jobs:
     - name: Trivy Fs Scan
       run: trivy fs --format table -o fs-report.json .
 
-    - name:  Gitleaks Installation
-      run: sudo apt install gitleaks -y
+    - name: Gitleaks Installation
+      run: sudo apt-get install -y gitleaks
+
     - name: Gitleaks Code Scan
-      run: gitleaks detect source . -r gitleaks-report.json -f json 
+      run: gitleaks detect -s . -f json -r gitleaks-report.json
 
   test:
 
