--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -39,7 +39,11 @@ jobs:
       run: trivy fs --format table -o fs-report.json .
 
     - name: Gitleaks Installation
-      run: sudo apt-get install -y gitleaks
+      run: |
+        GITLEAKS_VERSION=$(curl -s https://api.github.com/repos/gitleaks/gitleaks/releases/latest | grep tag_name | cut -d '"' -f 4)
+        wget https://github.com/gitleaks/gitleaks/releases/download/$GITLEAKS_VERSION/gitleaks-linux-amd64 -O gitleaks
+        chmod +x gitleaks
+        sudo mv gitleaks /usr/local/bin/gitleaks
 
     - name: Gitleaks Code Scan
       run: gitleaks detect -s . -f json -r gitleaks-report.json
