--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -40,10 +40,12 @@ jobs:
 
     - name: Gitleaks Installation
       run: |
-        GITLEAKS_VERSION=$(curl -s https://api.github.com/repos/gitleaks/gitleaks/releases/latest | grep tag_name | cut -d '"' -f 4)
-        wget https://github.com/gitleaks/gitleaks/releases/download/$GITLEAKS_VERSION/gitleaks-linux-amd64 -O gitleaks
-        chmod +x gitleaks
-        sudo mv gitleaks /usr/local/bin/gitleaks
+       GITLEAKS_VERSION=$(curl -s https://api.github.com/repos/gitleaks/gitleaks/releases/latest | grep tag_name | cut -d '"' -f 4 | sed 's/v//')
+       wget https://github.com/gitleaks/gitleaks/releases/download/v${GITLEAKS_VERSION}/gitleaks_${GITLEAKS_VERSION}_linux_x64.tar.gz
+       tar -xvzf gitleaks_${GITLEAKS_VERSION}_linux_x64.tar.gz
+       chmod +x gitleaks
+       sudo mv gitleaks /usr/local/bin/gitleaks
+
 
     - name: Gitleaks Code Scan
       run: gitleaks detect -s . -f json -r gitleaks-report.json
