--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -92,6 +92,10 @@ jobs:
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         SONAR_HOST_URL: ${{ vars.SONAR_HOST_URL }}
 
+    - name: Ensure jq is installed
+      run: sudo apt-get install -y jq
+
+
     - name: SonarQube Quality Gate check
       id: sonarqube-quality-gate-check
       uses: sonarsource/sonarqube-quality-gate-action@master
