--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -79,11 +79,14 @@ jobs:
     - name: Build Project
       run: mvn test
       
+    - name: Check JAR presence
+      run: ls -al target
+      
     - name: Upload JAR artifact
       uses: actions/upload-artifact@v4
       with:
         name: app-jar
-        path: target/*.jar
+        path: target/
 
     - name: Ensure unzip is installed
       run: sudo apt-get install unzip -y
